# django-party-htmx

./: .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
core/: settings.py  urls.py
party/: admin.py  conftest.py  models.py
party/fixtures/: initial_gifts.json  initial_guests.json  initial_parties.json
party/migrations/: 0001_initial.py  0002_party_guest_gift.py  0003_alter_gift_price.py
party/static/party/css/: tailwind_output.css
party/static/party/src/: main.css
party/templates/party/: base.html
party/tests/: test_party_list.py
