[project]
name = "django-party-htmx"
version = "0.1.0"
description = ""
authors = [
    {name = "guilhermegouw",email = "guilherme.gouw@gmail.com"}
]
packages = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.1.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest = "8.3.3"
pytest-django = "4.9.0"
django-browser-reload = "1.16.0"

